# gupshup-rs

./: Cargo.toml  README.md  README_PT-br.md
src/: lib.rs
src/core/: mod.rs
src/extensions/: mod.rs
src/models/: mod.rs  template.rs
src/templates/: mod.rs
